# ImageData

./: CMakeLists.txt  LICENSE  README.md
DBScripts/: create.sql
ImageDB/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
ImageDBLib/: CMakeLists.txt
ImageDBTests/: CMakeLists.txt
ImageDBTests/Tests/: Example_Tests.cpp
Notes/: Ideas.md
